# rfstat

./: Cargo.toml  README.md  commitlint.config.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md
docs/explanation/: architecture.md
docs/how-to/: README.md  automation.md  disk-monitoring.md  log-analysis.md  storage-optimization.md
docs/reference/: cli.md
docs/tutorials/: README.md  advanced-usage.md  getting-started.md
examples/: README.md  disk_monitor.sh  log_analyzer.py
src/: cli.rs  error.rs  formatter.rs  lib.rs  main.rs  scanner.rs  stats.rs  types.rs
tests/: integration_tests.rs
