[package]
name = "rfstat"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based CLI tool to display file statistics in a clean, human-readable format for DevOps workflows"
license = "GPL-3.0"
repository = "https://github.com/yourusername/rfstat"
keywords = ["cli", "filesystem", "statistics", "devops", "files"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"

[[bin]]
name = "rfstat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"
walkdir = "2.4"
humansize = "2.1"
tabled = "0.15"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
